# ato-control-traceability-engine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  roadmap.md
.github/workflows/: ci.yml  generate-artifacts.yml  publish-bundle.yml  validate.yml
architecture/: component-architecture.md  data-flow.md  system-context.md  trust-boundaries.md
assets/: README.md
atoevidence/: bundle.py  cli.py  freshness.py  mapping.py  oscal_export.py  render.py
atoevidence/tests/: test_freshness.py  test_mapping.py
controls/: control-mapping.md  control-mapping.yaml
docs/: architecture-overview.md  design-decisions.md  use-cases.md
examples/: control_catalog.yaml  control_trace_matrix.json  system_inventory.yaml  traceability_graph.mmd
examples/evidence/: ac-2-account-audit.yaml  au-2-log-review.yaml  ia-2-mfa-test-results.yaml  ra-5-vuln-scan.yaml  sc-28-encryption-verification.yaml  sc-8-tls-scan.yaml
src/: __init__.py  artifact_registry.py  cli.py  control_mapper.py  evidence_linker.py  models.py  traceability_graph.py
tests/: test_artifact_registry.py  test_control_mapper.py  test_evidence_linker.py
